--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v1
       - run: npm install
       - run: npm run build
-      # - run: npm test
-      # - uses: jakejarvis/s3-sync-action@master
-      #   with:
-      #     args: --acl public-read --follow-symlinks --delete
+      - run: npm test
+      - uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
