--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,9 +18,9 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm test
-      - uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --delete
+      # - uses: jakejarvis/s3-sync-action@master
+      #   with:
+      #     args: --acl public-read --follow-symlinks --delete
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
