--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,10 +18,10 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm test
-      - name: Configure AWS Credentials
-         uses: aws-actions/configure-aws-credentials@v1
-         with:
-         env:
+      - uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
